test/TestPhases/typechecker/invalid/assignFloatToInt.blc
module


activity empty ()()
    var x: float32 = 15
    var z: int64

    z = x * 3
    await false;
end
